--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,8 +36,8 @@ application.langs="en"
 db.default.driver=org.h2.Driver
 #db.default.url="jdbc:h2:mem:play"
 db.default.url="jdbc:h2:tmp/koeb.me.db"
-# db.default.user=sa
-# db.default.password=""
+db.default.user=sa
+db.default.password="oijd"
 
 # Evolutions
 # ~~~~~
@@ -50,10 +50,10 @@ db.default.url="jdbc:h2:tmp/koeb.me.db"
 # by providing an application-logger.xml file in the conf directory.
 
 # Root logger:
-logger.root=ERROR
+logger.root=DEBUG
 
 # Logger used by the framework:
-logger.play=INFO
+logger.play=DEBUG
 
 # Logger provided to your application:
 logger.application=DEBUG
