--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,8 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
-application.baseUrl = "http://localhost:9000"
+application.baseUrl = "//localhost:9000"
+application.protocol = "http:"
 
 # Secret key
 # ~~~~~
