add internationalization. some bug fixes.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,7 +12,7 @@ application.secret=":j<7M4K;kOWi?TgXCdio>xYio`r:GT6g51aG@n>SdMgwO8pMlxKhCLYwd6^]
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="en, de"
 
 # Global object class
 # ~~~~~
