--- a/deploy/ansible/roles/app/files/koeb_me.1.service
+++ b/deploy/ansible/roles/app/files/koeb_me.1.service
@@ -7,7 +7,7 @@ Requires=docker.service
 TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker kill koeb_me_1
 ExecStartPre=-/usr/bin/docker rm koeb_me_1
-ExecStart=/usr/bin/docker run --rm --name koeb_me_1 --volumes-from data-container koeb_me /opt/docker/bin/koeb_me -mem 256 
+ExecStart=/usr/bin/docker run --rm --name koeb_me_1 --volumes-from data-container --volume=/home/core/upload:/opt/docker/start-conf/ -p 80:9000 -p 443:9443 koeb_me /opt/docker/bin/koeb_me -mem 256 
 ExecStop=/usr/bin/docker stop koeb_me_1
 
 [X-Fleet]
